# a2a-tokenized-provisioning

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Justfile  README.md  a2a-execution-and-visualization-plan.md  a2a-tokenized-provisioning-design.md  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md  pyproject.toml
agents/src/agents/: __init__.py  a2a_adapter.py  consumer_graph.py  decision.py  llm.py  mcp_tools.py  provider_graph.py
agents/tests/: conftest.py  test_a2a.py  test_consumer_graph.py  test_decision_live.py  test_llm_retry.py  test_mcp_purchase.py  test_provider_graph.py  tests_support.py
chainmcp/: README.md  pyproject.toml
chainmcp/src/chainmcp/: __init__.py  artifacts.py  client.py  mcp_server.py  reader.py  signing.py  testing.py
chainmcp/tests/: conftest.py  test_artifacts.py  test_cross_stack.py  test_mcp_server.py  test_signing.py
contracts/: .gas-snapshot  EXPLORE-fulfill.md  EXPLORE-revoke.md  EXPLORE-settlement.md  EXPLORE.md  README.md  foundry.toml
contracts/script/: Deploy.s.sol  DeployCounter.s.sol
contracts/src/: Counter.sol  MockTOK.sol  Settlement.sol
contracts/test/: Counter.t.sol  Fulfill.t.sol  Revoke.t.sol  Settlement.t.sol
controller/: README.md  pyproject.toml
controller/src/controller/: __init__.py  app.py  auth.py  domain.py  resource_map.py  resource_map.yaml  service.py  translators.py  wiring.py
controller/tests/: test_api.py  test_auth.py  test_domain.py  test_translators.py
controller/tests/goldens/: bandwidth_ticket7.json  telemetry_ticket8.json
docs/: 00-the-story.md  01-implementation-plan.md  02-architecture.md  03-interfaces.md  03a-interfaces-walkthrough.md  03b-lifecycle-walkthrough.md  03c-skeleton-walkthrough.md  04-contract-spec.md  04-writing-standard.md  04a-settlement-walkthrough.md  05-controller-spec.md  05-from-scratch.md  06-agents-spec.md  07-netlab.md  08-demo-dashboard.md  09-evaluation.md  09a-evaluation-walkthrough.md  LEARNING-PATH.md
docs/adr/: 001-llm-serving.md  002-a2a-sdk.md  003-dashboard-jury-first.md  004-chain-time-canonical-clock.md  005-resourceid-resolution.md  006-lab-datapath-enforcement.md  007-telemetry-delivery.md
docs/evidence/: M0.1.md  M0.2.md  M0.3.md  M1.1.md  M1.2.md  M1.3.md  M1.4.md  M1.5.md  M2.1.md  M2.2.md  M2.3.md  M3.1.md  M3.2.md  M3.3.md  M3.4.md  M4.1.md  M4.2.md  M4.3.md  M4.4.md  M4.5.md  M5.1.md  M5.2.md  M5.3.md  M5.4.md  M5.5.md  M5.6.md  M6.1.md  M6.2.md  M6.3.md  M6.4.md  M6.5.md  M7.1.md  TEMPLATE.md
e2e/: pyproject.toml  registry.json
e2e/notebooks/: agents_explore.ipynb  chain_client_explore.ipynb  console_explore.ipynb  controller_explore.ipynb  evaluation_explore.ipynb  netctl_explore.ipynb  scratch_inspect.ipynb  skeleton_explore.ipynb
e2e/notebooks/course/: 00_orientation.ipynb  01_python_toolbox.ipynb  02_pydantic_from_zero.ipynb  03_protocols_and_ports.ipynb  04_the_canonical_example.ipynb  05_the_walking_skeleton.ipynb  06_blockchain_from_zero.ipynb  07_chainmcp_the_signing_adapter.ipynb  08_controller_the_bouncer.ipynb  09_netctl_the_hands.ipynb  10_agents_the_brains.ipynb  11_worlds_and_profiles.ipynb  12_grand_finale.ipynb  13_the_evaluation.ipynb  14_results_and_conclusions.ipynb  README.md
e2e/runs/eval/: adversarial.jsonl  baseline.jsonl  expiry.jsonl  latency.jsonl  llm.jsonl  predicate.jsonl  revlag_sweep.jsonl  summary.json
e2e/src/e2e/: __init__.py  bringup.py  controller_server.py  demo.py  experiments.py
e2e/src/e2e/dashboard/: __init__.py  app.py  console.html  demo_run.py  emitter.py  orchestrator.py  server.py
e2e/src/e2e/skeleton/: __init__.py  fakes.py  scripted_agents.py  stub_controller.py  worlds.py
e2e/tests/: conftest.py  test_bringup.py  test_controller_showpiece.py  test_dashboard.py  test_demo.py  test_experiments.py  test_full_agent_driven.py  test_lifecycle.py  test_predicate.py  test_stage_exists.py
interfaces/: pyproject.toml
interfaces/src/a2a_interfaces/: __init__.py  fixtures.py  models.py  ports.py
interfaces/tests/: test_fixtures.py  test_models_reject.py  test_models_roundtrip.py  test_package.py  test_ports.py
llmserve/: README.md  modal_llm.py
netctl/: README.md  pyproject.toml
netctl/src/netctl/: __init__.py  connect.py  forwarder.py  gnmi_smoke.py  mock.py  paths.py  provisioner.py  testing.py
netctl/tests/: conftest.py  test_gnmi_lab.py  test_provisioner_contract.py
netlab/: README.md  mirror-policer-to-tc.sh  srl1-init.cli  topology.clab.yml
