[project]
name = "a2a-provisioning"
version = "0.0.0"
description = "Agent-to-agent tokenized network-service provisioning (workspace root)"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["interfaces", "e2e", "chainmcp", "netctl", "controller", "agents"]

[dependency-groups]
demo = [
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "streamlit>=1.38",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",  # fastapi TestClient transport (controller API tests)
]

[tool.pytest.ini_options]
testpaths = ["interfaces/tests", "e2e/tests", "chainmcp/tests", "netctl/tests", "controller/tests", "agents/tests"]

[tool.ruff]
line-length = 100
src = ["interfaces/src", "e2e/src", "chainmcp/src", "netctl/src", "controller/src", "agents/src"]
# Teaching notebooks under e2e/notebooks/ are exploratory artifacts, not library code.
extend-exclude = ["e2e/notebooks"]
