[project]
name = "agents"
version = "0.0.0"
description = "The brains: LangGraph graphs + OpenAI-compatible LLM client (ADR-001); LLM judgment in exactly two slots"
requires-python = ">=3.12"
dependencies = [
    "a2a-interfaces",
    "openai>=1.50",
    "langgraph>=0.2",
    "mcp>=1.2",
    "chainmcp",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.uv.sources]
a2a-interfaces = { workspace = true }
chainmcp = { workspace = true }
