[project]
name = "chainmcp"
version = "0.0.0"
description = "Chain adapter + signing; the only package that ever holds a private key (rule 2)"
requires-python = ">=3.12"
dependencies = [
    "a2a-interfaces",
    "web3>=7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chainmcp"]

[tool.uv.sources]
a2a-interfaces = { workspace = true }
