[project]
name = "controller"
version = "0.0.0"
description = "The bouncer + translator: deterministic gatekeeper between chain and network (never an LLM)"
requires-python = ">=3.12"
dependencies = [
    "a2a-interfaces",
    "eth-account>=0.13",
    "pyyaml>=6",
    "fastapi>=0.115",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/controller"]

[tool.uv.sources]
a2a-interfaces = { workspace = true }
