[project]
name = "a2a-e2e"
version = "0.0.0"
description = "The stage: skeleton, lifecycle tests, bring-up, dashboard"
requires-python = ">=3.12"
dependencies = [
    "a2a-interfaces",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/e2e"]

[tool.uv.sources]
a2a-interfaces = { workspace = true }
