[project]
name = "netctl"
version = "0.0.0"
description = "The hands: topology-agnostic gNMI provisioning (ADR-005; knows nothing about tickets)"
requires-python = ">=3.12"
dependencies = [
    "a2a-interfaces",
    "pygnmi>=0.8.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netctl"]

[tool.uv.sources]
a2a-interfaces = { workspace = true }
